# veeam_task

./: .gitignore  CMakeLists.txt
Veeam/: CMakeLists.txt  CheckArgs.h  Consts.h  IOManager.cpp  IOManager.h  MeasureTime.cpp  MeasureTime.h  Veeam  Veeam.cpp  Veeam.h  out.txt
Veeam/MD5/: MD5.cpp  MD5.h
